--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,10 +29,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/springboot-ec2-demo:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/springboot-ec2-cicd-demo:latest .
 
       - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/springboot-ec2-demo:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/springboot-ec2-cicd-demo:latest
 
       - name: Deploy on EC2
         uses: appleboy/ssh-action@v0.1.10
