--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=AwsEc2DockerCICDDemo
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store=classpath:ec2.p12
+server.ssl.key-store-password=changeit
+server.ssl.key-store-type=PKCS12
